# django-todos-restapi

./: .gitignore  Pipfile  Readme.md  pyproject.toml  requirements.txt
api/: urls.py  views.py
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  dev.py  prod.py
todos/: models.py
todos/migrations/: 0001_initial.py  0002_auto_20210402_0003.py
