[tool.poetry]
name = "drtodos"
version = "0.1.0"
description = "Django-ReactJS todos app"
authors = ["Sylvain kadjo"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pylint = "^2.7.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
